--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,5 @@ out/
 
 # Игнорировать java файлы
 *.java
-# Но конкретно ask*.java не игнорировать
+# Но конкретно Task*.java не игнорировать
 !Task*.java
